code clenaup and improve logging