@@ -170,10 +170,12 @@ public class ScreenshotDataLiveCacheDAOBatis implements ScreenshotDataLiveCacheD
                     .execute();
 
             if (all != null && !all.isEmpty()) {
-                return all.get(all.size() - 1);
+                return all.getLast();
             }
 
-            log.info("No screenshot entry found for session: {}", sessionUUID);
+            if (log.isDebugEnabled()) {
+                log.debug("No screenshot entry found for session: {}", sessionUUID);
+            }
             return null;
         } catch (Exception e) {
             log.error("Failed to get last screenshot entry for session: {} error: {}", sessionUUID, e.getMessage());
